# clientServer

./: CMakeLists.txt
src/: Dockerfile  client.c  server.c
src/database/: CylinderPack.pck  EmergencySounds.pck  LinePack.pck  MusicNotes.pck  PickupMeshes.pck  SpecialMeshes.pck  SpherePack.pck  package_list.txt  test.sh
